--- a/app/src/main/res/layout/activity_smart_reply.xml
+++ b/app/src/main/res/layout/activity_smart_reply.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    tools:context=".SmartReply">
+    tools:context=".activities.SmartReply">
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
